<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
    android:background="#FFFFE7"
	tools:context="${relativePackage}.${activityClass}" >

	<com.olliespage.Feedback.views.OutputGraphView
	    android:id="@+id/outputGraph"
	    android:layout_width="200dp"
	    android:layout_height="200dp"
	    android:layout_alignParentRight="true"
	    android:layout_alignTop="@+id/inputGraph"
	    android:layout_marginRight="37dp"
	    android:background="#FFFFFF" />

	<com.olliespage.Feedback.views.InputGraphView
	    android:id="@+id/inputGraph"
	    android:layout_width="200dp"
	    android:layout_height="200dp"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/backButton"
	    android:layout_marginLeft="35dp"
	    android:layout_marginTop="15dp"
	    android:background="#FFFFFF" />

	<Button
	    android:id="@+id/backButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="17dp"
	    android:layout_marginTop="14dp"
	    android:onClick="returnButtonClicked"
	    android:text="@string/returnButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/disturbGraphLabel"
        android:layout_alignLeft="@+id/inputGraph"
        android:layout_alignRight="@+id/inputGraph"
        android:gravity="center"
        android:text="@string/graphLabelOutput" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/inputGraph"
        android:layout_alignTop="@+id/inputGraph"
        android:layout_alignBottom="@+id/inputGraph"
        android:layout_marginLeft="5dp"
        android:gravity="center"
        android:text="@string/graphLabelInput" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputGraph"
        android:layout_alignLeft="@+id/inputGraph"
        android:layout_alignRight="@+id/inputGraph"
        android:gravity="center"
        android:text="@string/inputGraphLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/outputGraph"
        android:layout_alignLeft="@+id/outputGraph"
        android:layout_alignRight="@+id/outputGraph"
        android:gravity="center"
        android:text="@string/graphLabelOutput" />

    <TextView
        android:id="@+id/disturbGraphLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/outputGraph"
        android:layout_alignBottom="@+id/outputGraph"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:text="@string/graphLabelDisturb" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/outputGraph"
        android:layout_alignLeft="@+id/outputGraph"
        android:layout_alignRight="@+id/outputGraph"
        android:gravity="center"
        android:text="@string/outputGraphLabel" />
    
</RelativeLayout>
